TTA Content Update
 + Added 'disabled` support for links and fixed all broken links to contain this attribute
 + Fixed Car Insurance Demo Buttons
 + Added descriptions where needed
 + Fixed Links where it was inaccurate or missing
 + Added Previews where missing or required update

--- a/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/Compact.html
+++ b/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/Compact.html
@@ -1,6 +1,6 @@
 <h2>List of Insurees</h2>
 
-<p><a href="./create">Create</a></p>
+<p><a href="./create" class="btn btn-primary">Create</a></p>
 <table class="table">
   <tr>
     <th>First Name</th>
