--- a/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/Create.html
+++ b/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/Create.html
@@ -80,9 +80,8 @@
 		<div class="form-group">
 			<div class="col-md-offset-2 col-md-10">
 				<input type="submit" value="Create" class="btn btn-primary" />
+				<a href="./demo" class="btn btn-secondary">Back to List</a>
 			</div>
 		</div>
 	</div>
 </form>
-
-<a href="./demo">Back to List</a>
