--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -24,7 +24,7 @@
       </main>
       <div id="knownLanguagesAndTech" class="container centerize">
         <h2>Skills</h2>
-        <div class="container centerize">
+        <div class="container centerize dynamicMargin">
             <div class="item centerize" data-label="HTML">
               <div class="popupAnchor centerize">
                 <div>
@@ -157,7 +157,7 @@
         </div>
         <div class="row dynamicMargin">
           <img src="/src/sprites/Logo/BattleOfTheForces.png" />
-          <a href="/orgs/BattleOfTheForces">Fullstack Developer - Battle of the Forces</a>
+          <a href="/orgs/BattleOfTheForces" disabled>Fullstack Developer - Battle of the Forces</a>
           <span>
             This is a personal project I work on my free time and is built with Unity3D and the C# language.
             The game is based on Tanki X except readjusting everything to be more balanced and be more logical
@@ -166,7 +166,7 @@
         </div>
         <div class="row dynamicMargin">
           <img src="/src/sprites/Logo/SkyChat.png" />
-          <a href="/orgs/SkyChat">UI/UX Developer - SkyChat</a>
+          <a href="/orgs/SkyChat" disabled>UI/UX Developer - SkyChat</a>
           <span>
             Built a web application for a decentralized chat platform for a Skynet competition.
             Looked and functioned very similiar to Discord or Slack, except not tied to a central location.
