--- a/PublicTemplates/kavemans.dev/orgs/TechAcademy/Calculator/index.html
+++ b/PublicTemplates/kavemans.dev/orgs/TechAcademy/Calculator/index.html
@@ -26,13 +26,16 @@
       </main>
       <div class="container showBorder centerize" style="margin-bottom: 0;">
         <div class="dynamicMargin">
-          <a href="/">Home</a> / <a href="/projects">Projects</a> / <a href="/orgs/TechAcademy">Tech Academy</a> / Beeper App
+          <a href="/">Home</a> / <a href="/projects">Projects</a> / <a href="/orgs/TechAcademy">Tech Academy</a> / Calculator
         </div>
       </div>
       <div class="container centerize">
         <h2>Overview<span>The motive behind this project</span></h2>
         <div class="dynamicMargin">
-          Needs Content
+          This was an project to make a calculator in the browser that can perform basic math operations.
+          The calculator buttons send events to the virtual calculator "processor", that processes each button press.
+          It has two "registers" where there a left number and a right number, the left number is either the first number you enter or the sum of the last compution.
+          The right side is the number that you are going to do operations on. The operators (+, -, ÷, ×, =) switch the register to right or add the sum and push left then switch to right.
         </div>
       </div>
       <div id="projects" class="container centerize hr">
@@ -68,6 +71,16 @@
             <li>.. process buttons that were pressed and update the display</li>
             <li>.. perform basic arithmetic on the given numbers (add/subtract/multiply/divide)</li>
           </ul>
+        </div>
+        <div class="row dynamicMargin">
+          <img src="/src/sprites/langs/github.png" />
+          <a target="_blank" href="https://github.com">GitHub (Version Control)</a>
+          <span>
+            Git is a Version Control System (VCS), which is used to track changes to a codebase over time.
+            GitHub is a centralized service owned by Microsoft that lets developers easily collaborate with each other.
+            This project pushed changed to a central repository where I kept C# Projects. It is public, so you can see the source code
+            <a href="https://github.com/Kaveinator/Tech-Academy-Projects/tree/main/5Javascript/BasicJavascriptProjects/Project12Calculator" target="_blank">here</a>.  
+          </span>
         </div>
       </div>
     </div>
