--- a/PublicTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/index.html
+++ b/PublicTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/index.html
@@ -20,7 +20,9 @@
           <span class="linksBox centerize">
             <a href="./CarInsuranceMVC/demo">Live Demo</a>
             <a href="https://github.com/Kaveinator/Tech-Academy-CSharp-Projects/tree/master/Assignments/CarInsuranceMVC" target="_blank" style='--icon: "\f09b";'>Source Code</a>
-            <span style="display: block; width: 100%;">A intro to MVC assignment, where you can add a row and delete rows</span>
+            <span style="display: block; width: 100%;">
+              This project utilised ASP.NET MVC to make CRUD pages and utilized Entity Framework as the Database transport.  
+            </span>
           </span>
         </div>
       </main>
