--- a/PublicTemplates/kavemans.dev/orgs/TechAcademy/NewsletterMVC/index.html
+++ b/PublicTemplates/kavemans.dev/orgs/TechAcademy/NewsletterMVC/index.html
@@ -20,7 +20,11 @@
           <span class="linksBox centerize">
             <a href="./NewsletterMVC/demo">Live Demo</a>
             <a href="https://github.com/Kaveinator/Tech-Academy-CSharp-Projects/tree/master/Assignments/NewsletterMVC" target="_blank" style='--icon: "\f09b";'>Source Code</a>
-            <span style="display: block; width: 100%;">A intro to MVC assignment, where you can add a row and delete rows</span>
+            <span style="display: block; width: 100%;">
+              This project utilised ASP.NET and to make a form to enter data and a page to view/delete data.
+              The initial implementation used ADO.NET as the transport between the SQLite file,
+              then it was upgraded to Entity Framework.
+            </span>
           </span>
         </div>
       </main>
