--- a/PublicTemplates/kavemans.dev/orgs/TechAcademy/TicTacToe/index.html
+++ b/PublicTemplates/kavemans.dev/orgs/TechAcademy/TicTacToe/index.html
@@ -14,7 +14,7 @@
   <body>
     <model src="kavemans.dev/header.html"></model>
     <div class="contentWrapper">
-      <main id="simpleParallaxEffect" class="centerize" style="--background-image: url('/src/images/generic/background11.jpg'); --background-y-anchor: 40%;">
+      <main id="simpleParallaxEffect" class="centerize" style="--background-image: url('/orgs/TechAcademy/TicTacToe/Preview1920x1200.png'); --background-y-anchor: 40%;">
         <div class="intro dynamicMargin" style="--background-image: url('/src/images/TechAcademy/Logo.webp');">
           <span>Tic-Tac-Toe</span>
           <span class="linksBox centerize">
@@ -32,7 +32,9 @@
       <div class="container centerize">
         <h2>Overview<span>The motive behind this project</span></h2>
         <div class="dynamicMargin">
-          Needs Content
+          The purpose of this project was to make a simple Javascript app that has a state.
+          The game has a visual state and a virtual state, the virtual state contains the states of the squares as the game itself see's them,
+          the visual state reflects the virtual state and marks the individual squares with an X or O, depending on who's turn it is.
         </div>
       </div>
       <div id="projects" class="container centerize hr">
@@ -68,6 +70,16 @@
             <li>.. check if the player or computer won</li>
             <li>.. plays a different chime depending if the player won, lost or got a draw</li>
           </ul>
+        </div>
+        <div class="row dynamicMargin">
+          <img src="/src/sprites/langs/github.png" />
+          <a target="_blank" href="https://github.com">GitHub (Version Control)</a>
+          <span>
+            Git is a Version Control System (VCS), which is used to track changes to a codebase over time.
+            GitHub is a centralized service owned by Microsoft that lets developers easily collaborate with each other.
+            This project pushed changed to a central repository where I kept C# Projects. It is public, so you can see the source code
+            <a href="https://github.com/Kaveinator/Tech-Academy-Projects/tree/main/5Javascript/BasicJavascriptProjects/Project11TicTacToe" target="_blank">here</a>.  
+          </span>
         </div>
       </div>
     </div>
