--- a/PublicTemplates/kavemans.dev/projects.html
+++ b/PublicTemplates/kavemans.dev/projects.html
@@ -24,7 +24,7 @@
             <img src="/src/images/TechAcademy/TransparentLogo.png" />
             <a href="/orgs/TechAcademy">Student - Tech Academy</a>
             <span>
-              Lorem Ipsum... no I don't remember the rest
+              Tech Academy is a school located in the downtown region of Portland, Oregon and offers several bootcamps to choose from. I choose the "C# and .NET Bootcamp" since I have worked with C# before and I want to pursue a career as a Junior C#/.NET Developer.
             </span>
           </div>
           <div class="row">
@@ -40,10 +40,8 @@
           </div>
           <div class="row">
             <img src="#" />
-            <a href="/orgs/CAL">Student - Center for Advanced Learning</a>
-            <span>
-              Need to add projects from here
-            </span>
+            <a href="/orgs/CAL" disabled>Student - Center for Advanced Learning</a>
+            <span></span>
           </div>
           <!--<div class="row">
             <img src="/src/sprites/logo/BattleOfTheForces.png" />
@@ -63,7 +61,7 @@
         <div class="feed dynamicMargin centerize">
           <div class="row">
             <img src="/src/sprites/logo/SkyChat.png" />
-            <a href="#">UI/UX Engineer - SkyChat</a>
+            <a href="#" disabled>UI/UX Engineer - SkyChat</a>
             <span>
               Built a web application for a decentralized chat platform for a Skynet competition.
               Looked and functioned very similiar to Discord or Slack, except not tied to a central location.
@@ -73,7 +71,7 @@
           </div>
           <div class="row">
             <img src="/src/sprites/logo/WebServerProject.png" />
-            <a href="#">Custom C# Web Server - Personal Project</a>
+            <a href="#" disabled>Custom C# Web Server - Personal Project</a>
             <span>
               Inspired by one of my older projects based in node.js, I rebuilt the HTTP server that featured server-side rendering and server-side event callbacks.
               I also made ExperimentalSQL, which is a library similar to Entity Framework except based on a based on ADO.NET implementation and is constrained to use SQLite3.
@@ -81,7 +79,7 @@
           </div>
           <div class="row">
             <img src="/src/sprites/logo/icons8-web-48.png" />
-            <a href="#">Fullstack Web Developer - Education Hub</a>
+            <a href="#" disabled>Fullstack Web Developer - Education Hub</a>
             <span>
               Built a web application for a learning platform in two weeks.
               Backend utilized a node.js server and MySQL storage to get and store channels, courses and content links.
@@ -90,7 +88,7 @@
           </div>
           <div class="row">
             <img src="/src/sprites/logo/icons8-web-48.png" />
-            <a href="#">Web Hosting Project - Personal Project</a>
+            <a href="#" disabled>Web Hosting Project - Personal Project</a>
             <span>
               Frontend programmed in HTML/CSS with vanilla JS, Backend programmed in node.js and uses MySQL for data storage.
               This platform allowed you to create a static website, enable/disable your site, and allowed to enable/disable FTP access.
@@ -98,7 +96,7 @@
           </div>
           <div class="row">
             <img src="/src/sprites/logo/icons8-web-48.png" />
-            <a href="#">The Grand Finale - Personal Project</a>
+            <a href="#" disabled>The Grand Finale - Personal Project</a>
             <span>
               A project built with Unity and C#.
               A single-player plane game where the player is tasked to destroy bases and other planes.
@@ -107,17 +105,17 @@
           </div>
           <div class="row">
             <img src="/src/sprites/logo/icons8-web-48.png" />
-            <a href="/projects/{?:OrgId}">Endless Runner - Personal Project</a>
+            <a href="/projects/{?:OrgId}" disabled>Endless Runner - Personal Project</a>
             <span></span>
           </div>
           <div class="row">
             <img src="/src/sprites/logo/icons8-web-48.png" />
-            <a href="/orgs/{?:OrgId}">{?:PrimaryRole} - {?:OrgName}</a>
+            <a href="/orgs/{?:OrgId}" disabled>{?:PrimaryRole} - {?:OrgName}</a>
             <span>{?:Brief}</span>
           </div>
           <div class="row">
             <img src="/src/sprites/logo/icons8-web-48.png" />
-            <a href="/projects/{?:OrgId}">{?:ProjectName} - Personal Project</a>
+            <a href="/projects/{?:OrgId}" disabled>{?:ProjectName} - Personal Project</a>
             <span>{?:Brief}</span>
           </div>
         </div>
