--- a/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/Simple.html
+++ b/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/Simple.html
@@ -1,6 +1,6 @@
 <h2>List of Insurees</h2>
 
-<p><a href="./create">Create</a></p>
+<p><a href="./create" class="btn btn-primary">Create</a></p>
 <table class="table">
   <tr>
     <th>First Name</th>
