--- a/PublicTemplates/kavemans.dev/orgs/TankiX.html
+++ b/PublicTemplates/kavemans.dev/orgs/TankiX.html
@@ -65,7 +65,7 @@
             <img src="/src/images/TankiX/thumbnail/LanguageBugFixes.Preview.png" />
           </div>
           <div class="content">
-            <a href="./TankiX/LanguageSelector" class="title">Language Selector Maintance - Unity Developer</a>
+            <a href="./TankiX/LanguageSelector" class="title" disabled>Language Selector Maintance - Unity Developer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/unity.png" alt="Unity3D" />
@@ -167,7 +167,7 @@
             </video>
           </div>
           <div class="content">
-            <a class="title" href="./TankiX/2Paint2GraffitiUpdate">Content Update - Unity Developer</a>
+            <a class="title" href="./TankiX/2Paint2GraffitiUpdate" disabled>Content Update - Unity Developer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/unity.png" alt="Unity3D" />
@@ -189,7 +189,7 @@
             <img src="/src/images/aspects/16x9.png" />
           </div>
           <div class="content">
-            <a class="title" href="./TankiX/2Paint2GraffitiUpdate">App Launcher - Electron Developer</a>
+            <a class="title" href="./TankiX/2Paint2GraffitiUpdate" disabled>App Launcher - Electron Developer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/html.png" alt="HTML" />
@@ -224,7 +224,7 @@
             <!--<img src="http://via.placeholder.com/160x90" />-->
           </div>
           <div class="content">
-            <a class="title" href="./TankiX/GameServer">Game Server - Maintainer</a>
+            <a class="title" href="./TankiX/GameServer" disabled>Game Server - Maintainer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
