--- a/PublicTemplates/kavemans.dev/orgs/TechAcademy.html
+++ b/PublicTemplates/kavemans.dev/orgs/TechAcademy.html
@@ -49,7 +49,7 @@
             <!--<img src="http://via.placeholder.com/160x90" />-->
           </div>
           <div class="content">
-            <a class="title" href="./TankiX/TheaterCMS3">TheaterCMS3 - Fullstack Developer</a>
+            <a class="title" href="./TankiX/TheaterCMS3" disabled>TheaterCMS3 - Fullstack Developer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/html.png" alt="HTML" />
@@ -81,10 +81,10 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <img src="./TechAcademy/NewsletterMVC/Preview960x540.png" />
+            <img src="./TechAcademy/ServerLocalTimeMVC/Preview480x270.png" />
           </div>
           <div class="content">
-            <a class="title" href="./TechAcademy/NewsLetterMVC">NewsLetter Subscription - C# Programmer</a>
+            <a class="title" href="./TechAcademy/ServerLocalTimeMVC">Server Local Time - C# Programmer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
@@ -95,12 +95,20 @@
                 <span class="tooltiptext">ASP.NET MVC</span>
               </span>
               <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/azure.png" alt="Azure" />
+                <span class="tooltiptext">Deployed on Azure</span>
+              </span>
+              <span class="label centerize">
                 <img src="/src/sprites/langs/live.png" alt="C#" />
                 <span class="tooltiptext">Live Demo Available</span>
               </span>
             </span>
             <div class="description">
-              Needs content and MVC.NET badge
+              This was a project to publish a .NET Core MVC Application onto the Azure Cloud. The application within itself was not complicated, it consisted of a single page showing the local server's time in the center of the screen, you also got a visit counter/metric.
             </div>
           </div>
         </div>
@@ -121,22 +129,30 @@
                 <span class="tooltiptext">ASP.NET MVC</span>
               </span>
               <span class="label centerize">
+                <img src="/src/sprites/langs/database.png" alt="C#" />
+                <span class="tooltiptext">Entity Framework</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
+              </span>
+              <span class="label centerize">
                 <img src="/src/sprites/langs/live.png" alt="C#" />
                 <span class="tooltiptext">Live Demo Available</span>
               </span>
             </span>
             <div class="description">
-              Needs content and MVC.NET badge
+              This project utilised ASP.NET MVC to make CRUD pages and utilized Entity Framework as the Database transport.
             </div>
           </div>
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <img src="./TechAcademy/ServerLocalTimeMVC/Preview480x270.png" />
+            <img src="./TechAcademy/NewsletterMVC/Preview960x540.png" />
           </div>
           <div class="content">
-            <a class="title" href="./TechAcademy/ServerLocalTimeMVC">Server Local Time - C# Programmer</a>
+            <a class="title" href="./TechAcademy/NewsLetterMVC">NewsLetter Subscription - C# Programmer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
@@ -147,8 +163,12 @@
                 <span class="tooltiptext">ASP.NET MVC</span>
               </span>
               <span class="label centerize">
-                <img src="/src/sprites/langs/azure.png" alt="Azure" />
-                <span class="tooltiptext">Deployed on Azure</span>
+                <img src="/src/sprites/langs/database.png" alt="C#" />
+                <span class="tooltiptext">ADO.NET, Entity Framework</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
               </span>
               <span class="label centerize">
                 <img src="/src/sprites/langs/live.png" alt="C#" />
@@ -156,14 +176,16 @@
               </span>
             </span>
             <div class="description">
-              This was a project to publish a .NET Core MVC Application onto the Azure Cloud. The application within itself was not complicated, it consisted of a single page showing the local server's time in the center of the screen, you also got a visit counter/metric.
+              This project utilised ASP.NET and to make a form to enter data and a page to view/delete data.
+              The initial implementation used ADO.NET as the transport between the SQLite file,
+              then it was upgraded to Entity Framework.
             </div>
           </div>
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/Blackjack/Preview500x280.jpg" />
           </div>
           <div class="content">
             <a class="title" href="./TechAcademy/Blackjack">Blackjack - C# Programmer</a>
@@ -172,16 +194,20 @@
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
+              </span>
             </span>
             <div class="description">
-              Needs content
+              A classic game of 21, where your goal is to get cards totaling up to - but not over - the sum of 21. This was built in a console application.
             </div>
           </div>
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <img src="https://github.com/Kaveinator/Tech-Academy-CSharp-Projects/blob/7f4f4deb15140a57942fe173f3e343abae468280/readmeResources/Assignments.Preview.png?raw=true" />
+            <img src="./TechAcademy/Assignments/Preview500x280.jpg" />
           </div>
           <div class="content">
             <a class="title" href="./TechAcademy/Assignments">Assignments Console App - C# Programmer</a>
@@ -190,9 +216,13 @@
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
+              </span>
             </span>
             <div class="description">
-              Needs content
+              A program I built while at Tech Academy aimed at helping instructors grade
             </div>
           </div>
         </div>
@@ -215,6 +245,10 @@
               <span class="label centerize">
                 <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
                 <span class="tooltiptext">Javascript</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
               </span>
               <span class="label centerize">
                 <img src="/src/sprites/langs/live.png" alt="C#" />
@@ -247,6 +281,10 @@
                 <span class="tooltiptext">Javascript</span>
               </span>
               <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
+              </span>
+              <span class="label centerize">
                 <img src="/src/sprites/langs/live.png" alt="C#" />
                 <span class="tooltiptext">Live Demo Available</span>
               </span>
@@ -275,6 +313,10 @@
               <span class="label centerize">
                 <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
                 <span class="tooltiptext">Javascript</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
               </span>
               <span class="label centerize">
                 <img src="/src/sprites/langs/live.png" alt="C#" />
