Add Resume (Server Restart not Required)
 + Added Resume

--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -19,6 +19,11 @@
         <div class="intro landing" style="--background-image: url('./../sprites/ChannelIcon.jpg'); --border-radius: 50%;">
           <span>Hi, my name is Kaveman and I'm a...</span>
           <span id="mainRoleThing">Software Developer</span>
+          <span class="linksBox centerize">
+            <a href="https://www.linkedin.com/in/kevin-gorbatenko/" target="_blank" style='--icon: "\f08c";'>linkedin.com/in/kevin-gorbatenko/</a>
+            <a href="https://github.com/Kaveinator" target="_blank" style='--icon: "\f09b";'>github.com/Kaveinator</a>
+            <a href="Kaveman.Resume.pdf" target="_blank" style='--icon: "\f15b";'>Kaveman.Resume.pdf</a>
+          </span>
         </div>
         <span class="credits">Background: A map I worked on called "Madness" for the <a href="/orgs/TankiX/MadnessUpdate">TankiX</a> orginization</span>
       </main>
