--- a/PublicTemplates/kavemans.dev/projects.html
+++ b/PublicTemplates/kavemans.dev/projects.html
@@ -39,7 +39,27 @@
             </span>
           </div>
           <div class="row">
-            <img src="#" />
+            <img src="/src/sprites/logo/BattleOfTheForces.png" />
+            <a href="/orgs/CAL" disabled>Full-Stack Developer - Battle of the Forces</a>
+            <span></span>
+          </div>
+          <div class="row">
+            <img src="/src/sprites/logo/SkyChat.png" />
+            <a href="/orgs/CAL" disabled>UI/UX Developer - SkyChat</a>
+            <span>
+              Built a web application for a decentralized chat platform for a Skynet competition.
+              Looked and functioned very similiar to Discord or Slack, except not tied to a central location.
+              Design is fluid and supports switching from mobile/desktop/portrait view.
+              Also built an electron client which included a few tweaks to make the app look and feel more smooth.
+            </span>
+          </div>
+          <div class="row">
+            <img src="/src/sprites/logo/EduHub.png" />
+            <a href="/orgs/CAL" disabled>Full-Stack Developer - Education Hub</a>
+            <span></span>
+          </div>
+          <div class="row">
+            <img src="/src/sprites/logo/CAL.png" />
             <a href="/orgs/CAL" disabled>Student - Center for Advanced Learning</a>
             <span></span>
           </div>
