Update Everything to use PageModel

--- a/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/_Layout.html
+++ b/PrivateTemplates/kavemans.dev/orgs/TechAcademy/CarInsuranceMVC/_Layout.html
@@ -23,10 +23,10 @@
       </div>
     </nav>
       <div class="container body-content">
-          {?:content}
+          {?:Content}
           <hr />
           <footer>
-              <p>&copy; {?:year} - My ASP.NET Application</p>
+              <p>&copy; {?:Year} - My ASP.NET Application</p>
           </footer>
       </div>
   
