--- a/PrivateTemplates/kavemans.dev/orgs/TechAcademy/ServerLocalTimeMVC.View.html
+++ b/PrivateTemplates/kavemans.dev/orgs/TechAcademy/ServerLocalTimeMVC.View.html
@@ -14,7 +14,7 @@
       <p>
         Site was loaded <span class="font-ss">{?:RefreshCount}</span> times globally!
         <br />
-        Server's Local time is <span class="font-ss">{?:currentDateTime}</span>
+        Server's Local time is <span class="font-ss">{?:CurrentDateTime}</span>
       </p>
       <a href="">Refresh</a>
     </div>
