--- a/PrivateTemplates/kavemans.dev/footer.html
+++ b/PrivateTemplates/kavemans.dev/footer.html
@@ -1,6 +1,7 @@
-<footer class="container centerize">
+<footer class="centerize">
   <div class="dynamicMargin">
     <h2>
+      <img class="logo" src="/src/sprites/KeyFireLogo.webp" />
       Copyright &copy; 2022-24 Kaveman. All Rights Reserved.
       <br />
       Icons by <a href="https://fontawesome.com/">Font Awesome</a> and <a href="https://icons8.com/about" target="_blank">Icons8</a>
