--- a/PublicTemplates/kavemans.dev/Contact.html
+++ b/PublicTemplates/kavemans.dev/Contact.html
@@ -14,7 +14,7 @@
   <body class="stickyFooter" onload="Start();">
     <model src="kavemans.dev/header.html"></model>
     <div class="contentWrapper" style="height: 100vh;">
-      <main id="simpleParallaxEffect" class="centerize darken" style="min-height: 100%; box-sizing: border-box; background-image: url('/src/images/TankiX/thumbnail/RisingSchool.Preview.png')">
+      <main id="simpleParallaxEffect" class="centerize darken" style="min-height: 100%; box-sizing: border-box; background-image: url('/src/orgs/TankiX/BoomboxUpdate.Preview.webp')">
         <!-- Unused, seems a bit weird
         <div class="contactBackgroundArt">
           <div class="circle1 fillScreen"></div>
