--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -143,41 +143,7 @@
       </div>
       <div id="projects" class="container centerize">
         <h2>Recent Activity</h2>
-        <div class="row dynamicMargin">
-          <img src="/src/images/TechAcademy/TransparentLogo.png" />
-          <a href="/orgs/TechAcademy">Student - Tech Academy</a>
-          <span>
-            This was the Live Project portion in the bootcamp where it simulated a work enviorment and what you'd be doing as a programmer, aside from doing standups, there was a task board where there were tasks the required me to update content, add CRUD pages with .NET MVC and functionality with Entity Framework and properly style pages.
-          </span>
-        </div>
-        <div class="row dynamicMargin">
-          <img src="/src/sprites/Logo/ReviveTankiX.webp" />
-          <a href="/orgs/TankiX">Unity Developer - Revive Tanki X</a>
-          <span>
-            Since the closure of Tanki X by AlternativaGames in early 2020, I have been involved in the Revive Tanki X community as a developer.
-            I've collaborated with other developers, using Discord to communicate and GitHub as the Version Control system,
-            my work included, but wasn't limited to, client development, reverse engineering, patching, and maintenance of the game.
-          </span>
-        </div>
-        <div class="row dynamicMargin">
-          <img src="/src/sprites/Logo/BattleOfTheForces.png" />
-          <a href="/orgs/BattleOfTheForces" disabled>Fullstack Developer - Battle of the Forces</a>
-          <span>
-            This is a personal project I work on my free time and is built with Unity3D and the C# language.
-            The game is based on Tanki X except readjusting everything to be more balanced and be more logical
-            than what TankiX has become. This project is still in developerment
-          </span>
-        </div>
-        <div class="row dynamicMargin">
-          <img src="/src/sprites/Logo/SkyChat.png" />
-          <a href="/orgs/SkyChat" disabled>UI/UX Developer - SkyChat</a>
-          <span>
-            Built a web application for a decentralized chat platform for a Skynet competition.
-            Looked and functioned very similiar to Discord or Slack, except not tied to a central location.
-            Design is fluid and supports switching from mobile/desktop/portrait view. Also built an electron client
-            which included a few tweaks to make the app look and feel more smooth.
-          </span>
-        </div>
+        <em>Under Maintenance</em>
       </div>
     </div>
     <model src="kavemans.dev/footer.html"></model>
