--- a/PrivateTemplates/kavemans.dev/Projects.html
+++ b/PrivateTemplates/kavemans.dev/Projects.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./src/styles/framework.css" type="text/css" rel="stylesheet" />
-    <link href="./src/styles/common.css" type="text/css" rel="stylesheet" />
-    <link href="./src/styles/main.css" type="text/css" rel="stylesheet" />
-    <link href="./src/styles/devlog.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/framework.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/common.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/main.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/devlog.css" type="text/css" rel="stylesheet" />
     <model src="kavemans.dev/FontAwesome"></model>
   </head>
   <body>
