--- a/PrivateTemplates/kavemans.dev/Projects.OrgItem.html
+++ b/PrivateTemplates/kavemans.dev/Projects.OrgItem.html
@@ -1,5 +1,5 @@
 <div class="row">
   <img src="/src/orgs/{?:UrlName}.Icon.webp" onerror="this.src = '/src/sprites/Logo/default.png';" />
-  <p><a href="/orgs/{?:UrlName}">{?:Role} - {?:Name}</a></p>
+  <p><a href="/orgs/{?:UrlName}">{?:Role} - {?:Name}</a><span class="timestamp">{?:Duration}</span></p>
   <p>{?:BriefText}</p>
 </div>
