Added Timestamps to Projects
 + Projects are similarly labeled and sorted like Organizations

--- a/PrivateTemplates/kavemans.dev/OrgPage/ProjectEntry.html
+++ b/PrivateTemplates/kavemans.dev/OrgPage/ProjectEntry.html
@@ -5,6 +5,7 @@
   </div>
   <div class="content">
     <a href="/orgs/{?:OrgUrlName}/{?:UrlName}" class="title">{?:Name} - {?:Role}</a>
+    <span class="timestamp">{?:Duration}</span>
     <span class="labels">{?:RenderBadges}</span>
     </span>
     <div class="description">{?:BriefText}</div>
