Added Recent Projects
 + Recent Projects are (currently) limited to 4 projects, no projects can be part of the same organization and both, the project and the org must be published to be shown
 + The first panel on the landing page now has stronger shadow to give more contrast to the text

--- a/PrivateTemplates/kavemans.dev/Homepage/_Layout.html
+++ b/PrivateTemplates/kavemans.dev/Homepage/_Layout.html
@@ -16,7 +16,7 @@
         <div class="announcementsContainer">
           <model src="kavemans.dev/announcements"></model>
         </div>
-        <div class="intro landing" style="--background-image: url('./../sprites/ChannelIcon.jpg'); --border-radius: 50%;">
+        <div class="intro landing strongTextShadow" style="--background-image: url('./../sprites/ChannelIcon.jpg'); --border-radius: 50%;">
           <span>Hi, my name is Kaveman and I'm a...</span>
           <span id="mainRoleThing">Software Developer</span>
           <span class="linksBox centerize">
@@ -142,8 +142,8 @@
         </div>
       </div>
       <div id="projects" class="container centerize">
-        <h2>Recent Activity</h2>
-        <em>Under Maintenance</em>
+        <h2>Recent Projects</h2>
+        {?:FeaturedProjects}
       </div>
     </div>
     <model src="kavemans.dev/footer.html"></model>
