--- a/PrivateTemplates/kavemans.dev/header.html
+++ b/PrivateTemplates/kavemans.dev/header.html
@@ -2,8 +2,8 @@
   <a href="/" class="logo"></a>
   <nav>
     <a href="/">Home</a>
-    <!--<a href="/devlog">Devlog</a>-->
     <a href="/projects">Projects</a>
+    <a href="/devlog">Devlog</a>
     <a href="/contact">Contact</a>
   </nav>
 </header>
