DevLog Listsing and Basic DevLog View Works
DevLog:
 + Updated Views, to reflect changes in Models
 + Created helper functions on DevLog Binding Tables
 + DevLogEntry is a seperate model, able to use it everywhere (requires, devlog.css stylesheet)

Some Fixes:
 + A single Markdown Pipeline is now used (since there were many instances of the same thing)

--- a/PrivateTemplates/kavemans.dev/DevLog/DevLogEntry.html
+++ b/PrivateTemplates/kavemans.dev/DevLog/DevLogEntry.html
@@ -5,6 +5,6 @@
     </span>
     <div class="content">
       <!--<div class="badges"></div>-->
-      <div class="tags">{?:TagsHtml}</div>
+      <div class="tags">{?:Tags}</div>
     </div>
   </div>
