--- a/PrivateTemplates/kavemans.dev/DevLog/_EntryLayout.html
+++ b/PrivateTemplates/kavemans.dev/DevLog/_EntryLayout.html
@@ -16,11 +16,11 @@
     <model src="kavemans.dev/header.html"></model>
     <div class="header"></div>
     <div class="contentWrapper">
-      <main class="container centerize hr">
+      <main class="container centerize">
         <model src="kavemans.dev/announcements"></model>
         <h2 style="margin-block-end: 0;">
           {?:TitleText}
-          <span class="tags">{?:TagsHtml}</span>
+          <span class="tags">{?:Tags}</span>
           <!--<span class="tags"><span class="tag">Web Development</span><span class="tag">Backend Development</span></span>-->
           <!--<span class="tags"><span class="tag">Unity</span><span class="tag">C#</span><span class="tag">Multiplayer</span><span class="tag">Video</span></span>-->
           <span style="margin-top: 4px;">Last Updated on {?:LastUpdatedDate}</span>
